Atualização do contato.html

--- a/contato.html
+++ b/contato.html
@@ -49,7 +49,7 @@
                     <option>TELEFONE</option>
                     <option>E-MAIL</option>
                 </select>
-                <select name="" id="">
+                <select name="contato" class="fordform" id="">
 	<option value="">TIPO DE CONTATO</option>
 	<option value="">ELOGIO</option>
 	<option value="">RECLAMAÇÃO</option>
